syntax = "proto3";

option csharp_namespace = "HotelCatalog.Api.Grpc";

package catalog;

service CatalogService {
  rpc GetAllServices (GetAllServicesRequest) returns (GetAllServicesResponse);
  
  rpc GetServiceById (GetServiceByIdRequest) returns (ServiceResponse);
  
  rpc CreateService (CreateServiceRequest) returns (ServiceResponse);
}

message GetAllServicesRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetServiceByIdRequest {
  int32 id = 1;
}

message CreateServiceRequest {
  string name = 1;
  string description = 2;
  double price = 3;
}

message GetAllServicesResponse {
  repeated ServiceMessage items = 1;
  int32 total_count = 2;
}

message ServiceResponse {
  ServiceMessage service = 1;
}

message ServiceMessage {
  int32 service_id = 1;    
  string name = 2;
  string description = 3;
  double price = 4;
}